tests/script_errors/invalid_escape_extractor/error.txt
Error: 
    1 | match event of
    2 |   case ~ re|\s
      |              ^ An unexpected escape code 's' was found